# Campus_Run

./: .gitignore  How to - SFML on mac using Qt.txt  README.md
Cat/: CMakeLists.txt  CMakeLists.txt.user.5710209  Collision.cpp  Collision.h  Game.cpp  HealthBar.cpp  HealthBar.h  Player.cpp  Player.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  floor.cpp  floor.h  game.h  item.h  main.cpp  obstacles.cpp  obstacles.h  sdtfx.h  stdfx.cpp  stdfx.h
Game/: Game.cpp  Player.cpp  Player.h  game.h  main.cpp  test medium game.sln  test medium game.vcxproj  test medium game.vcxproj.filters
Game/Debug/: test medium game.exe.recipe  test medium game.ilk  test medium game.vcxproj.FileListAbsolute.txt  vc142.idb
Game/Debug/test simple game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  desktop.ini  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test medium game.lastbuildstate
Game/x64/Debug/: test medium game.exe.recipe  test medium game.ilk  test medium game.vcxproj.FileListAbsolute.txt  vc142.idb
Game/x64/Debug/test medium game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test medium game.lastbuildstate
Reports/: report_01_11.md  report_06_12.md  report_08_11.md  report_13_12 .md  report_15_11.md  report_20_12.md  report_22_11.md  report_27_12.md  report_29_11.md
build-Cat-Desktop_Qt_5_12_5_clang_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Cat  build.ninja  cmake_install.cmake
build-Cat-Desktop_Qt_5_12_5_clang_64bit-Debug/Cat_autogen/: moc_predefs.h
build-Cat-Desktop_Qt_5_12_5_clang_64bit-Debug/Cat_autogen/EWIEGA46WW/: moc_mainwindow.cpp
final/SFML_RPG/: About.cpp  About.h  AnimationComponent.cpp  BlackpageState.cpp  BlackpageState.h  CharacterTab.cpp  CharacterTab.h  ComingSoon.cpp  ComingSoon.h  Entity.cpp  Entity.h  FlagTile.h  Flagtile.cpp  Game.cpp  Game.h  GameState.cpp  GameState.h  Gameover.cpp  Gameover.h  HitboxComponent.cpp  KillingTile.cpp  KillingTile.h  LeftWall.cpp  LeftWall.h  MainMenuState.cpp  MainMenuState.h  MovementComponent.cpp  Player.cpp  Player.h  PlayerGUI.cpp  PlayerGUI.h  RegularTile.cpp  RegularTile.h  SFML_RPG.vcxproj  SettingsState.cpp  SettingsState.h  State.h  TextState.cpp  TextState.h  Tile.cpp  (+6 more)
final/SFML_RPG/Config/: graphics.ini
final/SFML_RPG/x64/Debug/: SFML_RPG.exe.recipe  defaulteditormode.obj.enc  editormode.obj.enc  editorstate.obj.enc  game.obj.enc  gamestate.obj.enc  main.obj.enc  mainmenustate.obj.enc  movementcomponent.obj.enc  player.obj.enc  vc142.idb
(+13 files in other folders)
